--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <main class="main-content">
         <div class="logo-mark">LWHH</div>
         
-        <h1>Deconstruct. Build. Excel.</h1>
+        <h1>Deconstruct. Build. Excel!</h1>
         
         <p class="subtitle">
             Welcome to <strong>Learn With Hasin Hayder</strong>. <br>
