--- a/index.html
+++ b/index.html
@@ -172,8 +172,7 @@
         <h1>Deconstruct. Build. Excel!</h1>
         
         <p class="subtitle">
-            Welcome to <strong>Learn With Hasin Hayder</strong>. <br>
-            Advanced engineering insights for the curious developer.
+            Master <strong>WordPress, PHP, DevOps, and JavaScript</strong> with depth and precision. Professional engineering mentorship by Hasin Hayder.
         </p>
 
         <div class="cta-container">
